[gd_scene load_steps=8 format=3 uid="uid://dspdk4av2v2rr"]

[ext_resource type="Script" path="res://scripts/player.gd" id="1_bac0p"]
[ext_resource type="Texture2D" uid="uid://c4xiyljw7pw5b" path="res://assets/entities/arrow-small.png" id="2_mdfnb"]
[ext_resource type="Texture2D" uid="uid://bmukxfpddfpcw" path="res://assets/entities/circle-white-24.png" id="3_6n625"]
[ext_resource type="PackedScene" uid="uid://bsiw6s1tytjnv" path="res://scenes/pool.tscn" id="4_bwlfg"]
[ext_resource type="PackedScene" uid="uid://b0jb5j5g4ei4v" path="res://scenes/player_bullet.tscn" id="5_av3pv"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wvxxc"]
radius = 7.0

[sub_resource type="CircleShape2D" id="CircleShape2D_aeie4"]
radius = 4.0

[node name="Player" type="CharacterBody2D" groups=["player"]]
z_index = 10
script = ExtResource("1_bac0p")
player_speed = 300.0

[node name="Sprite2D" type="Sprite2D" parent="."]
modulate = Color(0.976471, 0.286275, 0.286275, 1)
position = Vector2(4, -8.88178e-16)
rotation = 4.71239
scale = Vector2(0.75, 0.75)
texture = ExtResource("2_mdfnb")

[node name="WallCollision" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wvxxc")

[node name="BulletSpawn" type="Marker2D" parent="."]
unique_name_in_owner = true
position = Vector2(7, 0)

[node name="Hitbox" type="Area2D" parent="."]

[node name="HitboxSprite" type="Sprite2D" parent="Hitbox"]
unique_name_in_owner = true
position = Vector2(-2.98023e-08, -2.98023e-08)
scale = Vector2(0.333333, 0.333333)
texture = ExtResource("3_6n625")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox"]
shape = SubResource("CircleShape2D_aeie4")
debug_color = Color(0.0862745, 0.701961, 0, 0.419608)

[node name="BulletPool" parent="." instance=ExtResource("4_bwlfg")]
unique_name_in_owner = true
initial_spawn = 5
node = ExtResource("5_av3pv")

[node name="FireRate" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="Reload" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[connection signal="area_entered" from="Hitbox" to="." method="_on_hitbox_area_entered"]
